# GameEngine

./: .gitmodules  Build.bat  CMakeLists.txt  GetDependencies.sh  GetDependenciesConan.bat  README.md  conanfile.txt
.github/workflows/: ubuntu-ci.yml  windows-ci.yml
atlastool/: main.c
engine/: CMakeLists.txt
engine/include/: Atlas.h  Audio.h  BinarySerializer.h  Components.h  DrawContext.h  DynArray.h  EngineUtils.h  Entities.h  Entity2DCollection.h  FilesystemUtils.h  Game2DLayer.h  Game2DLayerNetwork.h  Game2DVertexOutputHelpers.h  Geometry.h  HandleDefs.h  InputContext.h  KeyCodes.h  Maths.h  Network.h  Physics2D.h  Platform.h  PlatformDefs.h  SharedLib.h  StardewString.h  Thread.h  Widget.h  XMLHelpers.h  XMLSchema.h  main.h
engine/scripts/: ConvertTiled.py  DryGroundLUT.c  DryGroundLUT.h  DryGroundLUT.json  ExpandAnimations.py  GenerateGLFWKeyboardHashmap.py  TerrainTileCodegenGUI.py
engine/src/: CMakeLists.txt  main.c
engine/src/core/: Atlas.c  Audio.c  BinarySerializer.c  FilesystemUtils.c  Geometry.c  ImageFileRegstry.c  Network.c  ObjectPool.c  Platform.c  RawNetMessage.c  SharedLib.c  String.c  Thread.c  TimerPool.c  XMLHelpers.c  XMLSchema.c
engine/src/gameframework/layers/Game2D/: Camera2D.c  Game2DLayer.c  Game2DLayerNetwork.c  Game2DVertexOutputHelpers.c  Physics2D.c
engine/src/gameframework/layers/Game2D/EntitySystem/: Entities.c  Entities2DCollection.c  EntityQuadtree.c
engine/src/gameframework/layers/Game2D/EntitySystem/Components/: AnimatedSprite.c  Components.c  Sprite.c
engine/src/gameframework/layers/UI/: XMLUIGameLayer.c
engine/src/gameframework/layers/UI/widgets/: CanvasWidget.c  SliderWidget.c  StaticWidget.c  TextWidget.c  Widget.c
engine/src/input/: InputContext.c
engine/src/rendering/: DrawContext.c
engine/src/scripting/: Scripting.c
enginenettest/: CMakeLists.txt  main.c
enginetest/: StringHashMapTests.cpp
netcode/: CMakeLists.txt  client.c  netcode.c  server.c
